--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="overview">Overview</string>
     <string name="format_runtime">%1$d min</string>
+    <string name="retry">Retry</string>
 </resources>
