setup about cast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="biography">Biography</string>
     <string name="about">About</string>
     <string name="photo">Photo</string>
+    <string name="dash">-</string>
 </resources>
